--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .expensesApp {
-  width: 80vw;
+  width: 100vw;
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 20px;
