--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,4 +1,28 @@
 .header{
     height: 100%;
     width: 95%;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.header input{
+    width: 200px;
+    height: 30px;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.submitBtn{
+    text-decoration:  none;
+    border-radius: 10px;   
+    font-size:  20px;
+    font-weight: bold;
+    color: rgb(29, 102, 170);
+    background-color: white;
+    padding: 10px 45px;
+    transition: ease all 0.4s;
+    border: 2px solid rgb(29, 102, 170);
+
 }
